<resources>
    <string name="app_name">Play Application</string>
    <string name="login_success">Login successful</string>
    <string name="login">Login</string>
    <string name="enter_your_email">Enter your email</string>
    <string name="email">Email</string>
    <string name="loading">Loading…</string>
    <string name="enter_valid_email">Please enter valid email address</string>
    <string name="enter_valid_password">Password should be of 8–16 characters length including at least 1 uppercase, 1 lowercase, 1 number and 1 special character</string>
    <string name="logout">Logout</string>
    <string name="password">Password</string>
    <string name="by">By:</string>
    <string name="story_number">Story Number:</string>
    <string name="title">Title:</string>

    <string name="no_internet">No Internet connection</string>
    <string name="something_went_wrong">Something went wrong!</string>
    <string name="unauthorised">Unauthorised - Email address and password is not a valid combination</string>
    <string name="bad_request">Bad Request - Network communication error</string>
    <string name="refresh">Refresh</string>
</resources>
