<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/MatchParentPadded"
    tools:context=".login.ui.LoginActivity">

    <androidx.appcompat.widget.SwitchCompat
        android:id="@+id/switchTheme"
        style="@style/wrapContentLayout"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/usernameWrapper"
        style="@style/SectionLayout"
        android:layout_marginTop="@dimen/spacing_large"
        app:layout_constraintBottom_toTopOf="@id/passwordWrapper"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/editUsername"
            style="@style/SectionLayout"
            android:hint="@string/email" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/passwordWrapper"
        style="@style/SectionLayout"
        android:layout_marginTop="@dimen/spacing_large"
        app:layout_constraintBottom_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="parent"
        app:passwordToggleEnabled="true">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/editPassword"
            style="@style/SectionLayout"
            android:hint="@string/password"
            android:inputType="textPassword" />

    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/loginButton"
        style="@style/SectionLayout"
        android:layout_marginTop="@dimen/spacing_large"
        android:text="@string/login"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/passwordWrapper" />

    <com.airbnb.lottie.LottieAnimationView
        android:layout_width="@dimen/welcome_image_height_width"
        android:layout_height="@dimen/welcome_image_height_width"
        app:layout_constraintBottom_toTopOf="@id/usernameWrapper"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:lottie_autoPlay="true"
        app:lottie_fileName="happy.json"
        app:lottie_loop="true" />

</androidx.constraintlayout.widget.ConstraintLayout>